--- a/dashboards/dashboard.erb
+++ b/dashboards/dashboard.erb
@@ -9,13 +9,13 @@ $(function() {
 <div class="gridster">
   <ul>
 
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+<!--     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Image" data-image="/logo.png"></div>
     </li>
-
-    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
+ -->
+    <li data-row="1" data-col="2" data-sizex="2" data-sizey="1">
       <div data-id="welcome" data-view="Text"
-           data-title="Convoy" data-text="VDN">
+           data-title="Agilex" data-text="eHMP">
       </div>
     </li>
 
