Renamed page title.

--- a/dashboards/dashboard.erb
+++ b/dashboards/dashboard.erb
@@ -5,7 +5,7 @@ $(function() {
 });
 </script>
 
-<% content_for(:title) { "My super sweet dashboard" } %>
+<% content_for(:title) { "eHMP" } %>
 <div class="gridster">
   <ul>
 
