--- a/widgets/text/text.scss
+++ b/widgets/text/text.scss
@@ -15,6 +15,11 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   
   .title { 
     color: $title-color;
+    font-size: 24px;
+  }
+
+  .text {
+    font-size: 58px;
   }
 
   .more-info {
