--- a/dashboards/dashboard.erb
+++ b/dashboards/dashboard.erb
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 $(function() {
-  Dashing.widget_base_dimensions = [350, 324]
-  Dashing.numColumns = 3
+  Dashing.widget_base_dimensions = [340, 280]
+  Dashing.numColumns = 4
 });
 </script>
 
@@ -9,21 +9,21 @@ $(function() {
 <div class="gridster">
   <ul>
 
-<!--     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-view="Image" data-image="/logo.png"></div>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-view="Image" data-image="/logo.agilex.png"></div>
     </li>
- -->
-    <li data-row="1" data-col="2" data-sizex="2" data-sizey="1">
+
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="welcome" data-view="Text"
-           data-title="Agilex" data-text="eHMP">
+           data-title="" data-text="eHMP">
       </div>
     </li>
 
-    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
+    <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Clock"></div>
     </li>
 
-    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
+    <li data-row="1" data-col="2" data-sizex="3" data-sizey="1">
       <div data-id="jenkins" data-view="Jenkins" data-unordered="true"
            data-title="Jenkins" data-moreinfo="Build status"></div>
     </li>
