Added jenkins last commit message.

--- a/dashboards/dashboard.erb
+++ b/dashboards/dashboard.erb
@@ -1,6 +1,6 @@
 <script type='text/javascript'>
 $(function() {
-  Dashing.widget_base_dimensions = [340, 280]
+  Dashing.widget_base_dimensions = [340, 300]
   Dashing.numColumns = 4
 });
 </script>
@@ -27,6 +27,11 @@ $(function() {
       <div data-id="jenkins" data-view="Jenkins" data-unordered="true"
            data-title="Jenkins" data-moreinfo="Build status"></div>
     </li>
+
+    <li data-row="3" data-col="2" data-sizex="2" data-sizey="1">
+      <div data-id="jenkins-last-commit" data-view="Jenkinslastcommit" data-unordered="true" data-title="Last commit" ></div>
+    </li>
+
 
   </ul>
 </div>
