Added jenkins last commit widget to default dashboard.

--- a/dashboards/dashboard.erb
+++ b/dashboards/dashboard.erb
@@ -2,6 +2,7 @@
 $(function() {
   Dashing.widget_base_dimensions = [340, 300]
   Dashing.numColumns = 4
+  Dashing.numRows = 3
 });
 </script>
 
@@ -28,7 +29,7 @@ $(function() {
            data-title="Jenkins" data-moreinfo="Build status"></div>
     </li>
 
-    <li data-row="3" data-col="2" data-sizex="2" data-sizey="1">
+    <li data-row="3" data-col="2" data-sizex="3" data-sizey="1">
       <div data-id="jenkins-last-commit" data-view="Jenkinslastcommit" data-unordered="true" data-title="Last commit" ></div>
     </li>
 
